Removed MaxPermSize, added Java 17 opens/exports